@@ -278,7 +278,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 222
         TOPMARGIN, 7
-        BOTTOMMARGIN, 177
+        BOTTOMMARGIN, 208
         HORZGUIDE, 19
     END
 
@@ -787,7 +787,7 @@ BEGIN
     GROUPBOX        "Manage password history of current entries",IDC_STATIC,6,33,213,86
 END
 
-IDD_PS_MISC DIALOGEX 0, 0, 229, 182
+IDD_PS_MISC DIALOGEX 0, 0, 229, 213
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION | WS_SYSMENU
 CAPTION "Misc."
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -809,6 +809,8 @@ BEGIN
     GROUPBOX        "Alternate Browser ",IDC_STATIC,5,148,216,30
     EDITTEXT        IDC_OTHERBROWSERLOCATION,11,161,166,12,ES_AUTOHSCROLL | WS_GROUP
     PUSHBUTTON      "Browse",IDC_BROWSEFORLOCATION,182,160,31,14
+    EDITTEXT        IDC_DEFAULTAUTOTYPE,140,186,80,12,ES_AUTOHSCROLL
+    LTEXT           "Default Autotype String for this database:",IDC_STATIC,7,188,132,8
 END
 
 IDD_PS_BACKUP DIALOGEX 0, 0, 229, 223
